--- a/src/main/resources/static/css/component.css
+++ b/src/main/resources/static/css/component.css
@@ -160,7 +160,7 @@ button.fs-continue,
 }
 
 .js .fs-form-full .fs-fields > li {
-	position: absolute;
+	position: relative;
 	width: 100%;
 }
 
@@ -178,7 +178,7 @@ button.fs-continue,
 
 .fs-fields > li label.fs-field-label {
 	display: inline-block;
-	padding: 0 5px 1em 0;
+	padding: 0 5px 5px 0;
 	font-weight: 700;
 	pointer-events: none;
 }
@@ -295,8 +295,8 @@ button.fs-continue,
 	position: relative;
 	margin-right: 3%;
 	padding: 10px;
-	max-width: 200px;
-	width: 30%;
+	max-width: 150px;
+	width: 50%;
 	text-align: center;
 	font-weight: 700;
 	font-size: 50%;
