--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,76 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js" xmlns:th="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>深度学习为图片上色---调查问卷</title>
-		<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="/css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="/css/component.css" />
-		<link rel="stylesheet" type="text/css" href="/css/cs-select.css" />
-		<link rel="stylesheet" type="text/css" href="/css/cs-skin-boxes.css" />
-		<script src="/js/modernizr.custom.js"></script>
-	</head>
-	<body>
-		<div class="container">
-
-			<div class="fs-form-wrap" id="fs-form-wrap">
-				<div class="fs-title">
-					<h1>===深度学习为图片上色===调查问卷</h1>
-				</div>
-				<form id="myform" class="fs-form fs-form-full" autocomplete="off">
-					<ol class="fs-fields">
-						<li>
-							<label class="fs-field-label fs-anim-upper" for="q1">能否告诉我你的名字吖?</label>
-							<input class="fs-anim-lower" id="q1" name="q1" type="text" placeholder="Dean Moriarty" required/>
-						</li>
-						<li data-input-trigger style="bottom: 260px">
-							<label class="fs-field-label fs-anim-upper" for="q3" data-info="This will help us know what kind of service you need">你觉得下面三张深度学习上色照片哪一张效果更精准?</label>
-                            <div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower" align="center" style="padding: 0 65px 15px 0;">
-                                <img th:src="@{'/img/'+ ${imgName} + '.png'}">
-                            </div>
-							<div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower" style="width: 400px;margin: auto;">
-								<span><input id="q3b" name="q3" type="radio" value="conversion"/><label for="q3b" class="radio-conversion">Sell things</label></span>
-								<span><input id="q3a" name="q3" type="radio" value="mobile"/><label for="q3a" class="radio-mobile">Mobile market</label></span>
-							</div>
-						</li>
-						<li>
-							<label class="fs-field-label fs-anim-upper" for="q4">你有什么想说的吗？（对我或我的项目）</label>
-							<textarea class="fs-anim-lower" id="q4" name="q4" placeholder="Describe here"></textarea>
-						</li>
-						<li>
-							<label class="fs-field-label fs-anim-upper" for="q5">你认为你的网站值多少钱?</label>
-							<input class="fs-mark fs-anim-lower" id="q5" name="q5" type="number" placeholder="1000" step="100" min="100"/>
-						</li>
-					</ol><!-- /fs-fields -->
-					<button class="fs-submit" type="submit">提交问卷</button>
-				</form><!-- /fs-form -->
-			</div><!-- /fs-form-wrap -->
-
-		</div><!-- /container -->
-		<script src="/js/classie.js"></script>
-		<script src="/js/selectFx.js"></script>
-		<script src="/js/fullscreenForm.js"></script>
-		<script>
-			(function() {
-				var formWrap = document.getElementById( 'fs-form-wrap' );
-
-				[].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el) {	
-					new SelectFx( el, {
-						stickyPlaceholder: false,
-						onChange: function(val){
-							document.querySelector('span.cs-placeholder').style.backgroundColor = val;
-						}
-					});
-				} );
-
-				new FForm( formWrap, {
-					onReview : function() {
-						classie.add( document.body, 'overview' ); // for demo purposes only
-					}
-				} );
-			})();
-		</script>
-	</body>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="UTF-8">
+    <title>FYP -- Survey of Deep-Colourisation</title>
+    <style>
+        body {
+            background-color: #93B874;
+        }
+    </style>
+</head>
+<body>
+<h1>FYP -- Survey of Deep-Colourisation</h1>
+<HR>
+<form th:action="@{/submitForm}" th:object="${userAnswer}" method="post">
+    <h2>Fill in your personal info. (You can ignore these if you don't want to)</h2>
+    <label for="name">Please enter your name:</label><br>
+    <input type="text" name="name" id="name"/><br>
+    <label for="email">Please enter your email:</label><br>
+    <input type="text" name="email" id="email"/><br>
+    <h2>Part One</h2>
+    <label>1. Real or Fake?</label><br>
+    <img th:src="@{'/img/'+${imgName}}"><br>
+    <input type="radio" name="q1" id="q1-0" value="Real">It is Real.<br>
+    <input type="radio" name="q1" id="q1-1" value="Fake">It is Colourised by AI.<br>
+    <input type="submit" value="submit">
+</form>
+</body>
 </html>
